--- a/view/article/create.html
+++ b/view/article/create.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>新建文章 - 简易博客系统</title>
+  <title>新建文章 - 贾斯汀的博客系统</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark mb-4">
   <div class="container">
-    <a class="navbar-brand" href="/">简易博客</a>
+    <a class="navbar-brand" href="/">贾斯汀的博客</a>
     <div>
       <a href="/article" class="btn btn-sm btn-outline-light">返回列表</a>
     </div>
