--- a/view/article/show.html
+++ b/view/article/show.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{$article.title} - 简易博客系统</title>
+  <title>{$article.title} - 贾斯汀的博客系统</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
   <style>
       .article-content { line-height: 1.8; }
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-dark bg-dark mb-4">
   <div class="container">
-    <a class="navbar-brand" href="/">简易博客</a>
+    <a class="navbar-brand" href="/">贾斯汀的博客</a>
     <div>
       <a href="/article/edit/{$article.id}" class="btn btn-sm btn-outline-light me-2">编辑</a>
       <a href="/article" class="btn btn-sm btn-outline-light">返回列表</a>
