--- a/view/user/register.html
+++ b/view/user/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>注册 - 简易博客系统</title>
+  <title>注册 - 贾斯汀的博客系统</title>
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
   <style>
       .auth-container {
